--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 ## Build generated
 build/
 DerivedData
+esmerization.xcworkspace/
 
 ## Various settings
 *.pbxuser
@@ -44,6 +45,7 @@ playground.xcworkspace
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
 Pods/
+Podfile.lock
 
 # Carthage
 #
@@ -61,3 +63,7 @@ Carthage/Build
 
 fastlane/report.xml
 fastlane/screenshots
+
+
+
+MobileVLCKit.framework/
